Fixed "Other collectibles" module jumping while scrolling

--- a/web/less/frontend/modules/collection.less
+++ b/web/less/frontend/modules/collection.less
@@ -33,6 +33,7 @@
     display: block;
   }
   .thumbnails-inner {
+	  height: 82px;
     .clearfix();
   }
   .collectible {
